[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "telethon-layers"
version = "1.42.0+layers.2"
description = "Telethon fork with multiple layer namespaces (l221, l220) living alongside upstream"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
authors = [{ name = "Your Name or Org" }]
dependencies = [
  "pyaes",
  "rsa",
]

[project.optional-dependencies]
cryptg = ["cryptg"]

[project.urls]
Homepage = "https://github.com/LonamiWebs/Telethon"
Repository = "https://github.com/relapse3/Telethon221"

[tool.setuptools.packages.find]
include = ["telethon_layers", "telethon_layers.*"]

[tool.setuptools.package-data]
telethon_layers = ["py.typed"]

[tool.setuptools]
include-package-data = true
